<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".views.MainActivity">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aplicativo_para_projetos_de_ilumina_o"
        android:textColor="@color/colorPrimarylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/text_tipo_ambiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_do_ambiente"
        android:textColor="@color/colorPrimarylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19">

        <RadioButton
            android:id="@+id/radio_ambiente_comum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/ambientes_comuns"
            android:textColor="@color/colorPrimarylight" />

        <RadioButton
            android:id="@+id/radio_bancadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bancadas"
            android:textColor="@color/colorPrimarylight" />

        <RadioButton
            android:id="@+id/radio_menor_circulacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reas_de_menor_circula_o"
            android:textColor="@color/colorPrimarylight" />

        <RadioButton
            android:id="@+id/radio_home_office"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_office"
            android:textColor="@color/colorPrimarylight" />

        <RadioButton
            android:id="@+id/radio_ler_escrever"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/escrever_ler"
            android:textColor="@color/colorPrimarylight" />
    </RadioGroup>

    <TextView
        android:id="@+id/text_comprimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comprimento_do_ambiente_m"
        android:textColor="@color/colorPrimarylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/edit_comprimento"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimarylight"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <TextView
        android:id="@+id/text_largura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/largura_do_ambiente_m"
        android:textColor="@color/colorPrimarylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <EditText
        android:id="@+id/edit_largura"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimarylight"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51" />

    <TextView
        android:id="@+id/text_quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantidade_de_l_mpadas"
        android:textColor="@color/colorPrimarylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <EditText
        android:id="@+id/edit_quantidade"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimarylight"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <TextView
        android:id="@+id/text_distancia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dist_ncia_at_o_quadro_m"
        android:textColor="@color/colorPrimarylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <EditText
        android:id="@+id/edit_distancia"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimarylight"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73">

    <RadioButton
        android:id="@+id/radio_127v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:paddingRight="40dp"
        android:text="@string/_127v"
        android:textColor="@color/colorPrimarylight" />

    <RadioButton
        android:id="@+id/radio_220v"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_220v"
        android:textColor="@color/colorPrimarylight" />
    </RadioGroup>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/calcular"
        android:textColor="@color/colorPrimarylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
    </com.google.android.gms.ads.AdView>

</androidx.constraintlayout.widget.ConstraintLayout>